Refactored StateMaps to use QualifiedString